<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/icon_events"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/icon_food"
        android:title="@string/title_food" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icon_map"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />


</menu>